# frakensync

./: README.md  pyproject.toml  tox.ini
.github/workflows/: test.yml  tox.yml
frankensync/: core.py  transformers.py
frankensync/utils/: __init__.py  markers.py
pacro/: __init__.py  core.py  utils.py
test/: test_bisync.py  test_is_async_caller.py
tests/: test_frankensync.py  test_utils.py
