[tool.poetry]
name = "pacro"
version = "0.0.0"
description = "Macros for Python!"
authors = ["Dylan Wilson <dylanjw@protonmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6,<3.9"
astor = "^0.8.1"
toolz = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
pytest-asyncio = "^0.10.0"
asyncio = "^3.4.3"
flake8 = "^3.7.9"
isort = "^4.3.21"

[tool.isort]
multi_line_output=3
indent='    '
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

